<resources>
    <string name="app_name">FOSSCU</string>
    <string name="free_and_open_source_community_united">Free and open source community united</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="dont_have_an_account_sign_in">dont have an account sign in</string>
    <string name="don_t_have_an_account_sign_in">don\'t have an account sign in</string>
    <string name="already_have_an_account">already_have_an_account</string>
    <string name="signed">signed</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="Events">Events</string>
    <string name="team">Teams</string>
    <string name="Resources">Resources</string>
    <string name="About_Us">About</string>
    <string name="unknown">Unknown</string>
</resources>