<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:background="#0F9203"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="412dp"
        android:layout_height="784dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/newdesgin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="411dp"
                android:layout_height="728dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/desgin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/etSEmailAddress"
                        android:layout_width="350dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="40dp"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/textbox"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:textColorHint="#757575"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

                    <EditText
                        android:id="@+id/etSPassword"
                        android:layout_width="350dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:autofillHints="password"
                        android:background="@drawable/textbox"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:textColorHint="#757575"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.489"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etSEmailAddress" />

                    <EditText
                        android:id="@+id/etSConfPassword"
                        android:layout_width="350dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="24dp"
                        android:autofillHints="password"
                        android:background="@drawable/textbox"
                        android:ems="10"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:textColorHint="#757575"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etSPassword"
                        tools:ignore="TextContrastCheck" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSSigned"
                        android:layout_width="350dp"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:layout_marginTop="22dp"
                        android:background="@drawable/btn"
                        android:text="@string/signed"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etSConfPassword" />

                    <TextView
                        android:id="@+id/tvRedirectLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginTop="63dp"
                        android:gravity="center_horizontal"
                        android:text="@string/already_have_an_account"
                        android:textColor="#18206F"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnSSigned" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="345dp"
                        android:layout_height="219dp"
                        android:layout_marginTop="60dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.468"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/signupfosscu" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>
